chore: Updated openapi
